# cities-organizer

./: .gitignore  README.md  buildspec.yml  docker-compose.yml
android/: .gitignore  settings.gradle
angular/: .eslintrc.json  .gitignore  README.md  angular.json  generate-env.js  package-lock.json  package.json
express/: .eslintrc.json  app.ts  package-lock.json  package.json  tsconfig.json
golang/: Dockerfile  auth.go  cities.go  conversions.go  go.mod  go.sum  main.go  metros.go  middleware.go  models.go  neighborhoods.go  nullable_models.go
golang-mongo/: Dockerfile  apartments.go  cities.go  docs.go  employers.go  go.mod  go.sum  main.go  metros.go  models.go  neighborhoods.go  nullable_models.go  pics.go
java/: build.gradle
java-spring/: .dockerignore  .gitignore  Dockerfile  build.gradle  settings.gradle
node/: .eslintrc.json  .gitignore  Dockerfile  package.json  tsconfig.json
node-express/: .editorconfig  .eslintrc.json  .gitignore  .yarnrc  Dockerfile  package.json  tsconfig.json
php/: .gitignore  composer.json
python/: requirements.txt
ruby-on-rails/: .gitignore  Gemfile
rust-actix/: Cargo.toml
rust-actix/src/: cities.rs  main.rs  metros.rs  models.rs  neighborhoods.rs  pics.rs
rust-rocket/: Cargo.toml
rust-rocket/src/: main.rs  models.rs
vue/: README.md  index.html  package.json  pnpm-lock.yaml
website/: .editorconfig  .env.vault  .eslintrc.json  .gitignore  .npmignore  package-lock.json  package.json  pnpm-lock.yaml  sass-compile.js  tsconfig.eslint.json  (+1 more)
website-mongo/: package.json  pnpm-lock.yaml  tsconfig.json
(+398 files in other folders)
